# delamain-assistant

./: .gitignore  AGENTS.md  README.md  frontend_contract.md  pyproject.toml
config/: defaults.yaml
delamain_backend/: budget.py  config.py  dependencies.py  errors.py  main.py  maintenance.py  schemas.py  settings_store.py  structured_logging.py  subscription_status.py  syncthing_status.py  system_status.py  uploads.py  usage.py  vault_enrichment.py  vault_generated.py  vault_heartbeat.py  vault_staleness.py
delamain_ref/: __init__.py  cli.py  converters.py  index_md.py  ingest.py  lifecycle.py  manifest.py  paths.py  reconcile.py  templates.py  util.py  vault_index.py
docs/: graph_view_completion_spec.md  vault-graph-contract.md
frontend/: .env.local.example  .gitignore  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
scripts/: deploy_serrano.sh  live_model_smoke.py
tests/: conftest.py  test_actions_m5.py  test_app_m1.py  test_auth_access.py  test_budget.py  test_bundle_a.py  test_context_clock_refresh.py  test_database_reliability.py  test_delamain_ref.py  test_dependencies.py  test_fallback_integration.py  test_health_prompt_e.py  test_litellm_client.py  test_m4_path_policy.py  test_m4_tools.py  test_maintenance.py  test_router.py  test_sse.py  test_stabilization_m1.py  test_structured_logging.py  test_tool_loop_integration.py  test_tool_normalize.py  test_tool_registry.py  test_uploads.py  test_usage_reset_metadata.py  test_usage_syncthing_folders_permissions.py  test_vault_api.py  test_workers_m8.py
(+87 files in other folders)
