[project]
name = "delamain-backend"
version = "0.1.0"
description = "Phase 2 DELAMAIN FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite==0.20.0",
  "fastapi==0.115.6",
  "litellm==1.83.8",
  "psutil==6.1.1",
  "PyJWT[crypto]==2.10.1",
  "pydantic==2.12.5",
  "PyYAML==6.0.2",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
]

[project.scripts]
delamain = "delamain_ref.cli:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delamain_backend", "delamain_ref"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
